reporting part but its not yet working